# skymap

./: .gitignore  README.md  mypy.ini  pyproject.toml
bash/: healpix-indices-video.sh  test.sh
patches/: nightskycam3_2025_04_05_03_54_30_000.npz  nightskycam3_2025_04_05_03_54_30_001.npz  nightskycam3_2025_04_05_03_54_30_002.npz  nightskycam3_2025_04_05_03_54_30_003.npz  nightskycam3_2025_04_05_03_54_30_004.npz  nightskycam3_2025_04_05_03_54_30_005.npz  nightskycam3_2025_04_05_03_54_30_006.npz  nightskycam3_2025_04_05_03_54_30_007.npz  nightskycam3_2025_04_05_03_54_30_008.npz  nightskycam3_2025_04_05_03_54_30_009.npz  nightskycam3_2025_04_07_04_21_30_000.npz  nightskycam3_2025_04_07_04_21_30_001.npz  nightskycam3_2025_04_07_04_21_30_002.npz  nightskycam3_2025_04_07_04_21_30_003.npz  nightskycam3_2025_04_07_04_21_30_004.npz  nightskycam3_2025_04_07_04_21_30_005.npz  nightskycam3_2025_04_07_04_21_30_006.npz  nightskycam3_2025_04_07_04_21_30_007.npz  nightskycam3_2025_04_07_04_21_30_008.npz  nightskycam3_2025_04_07_04_21_30_009.npz  nightskycam3_2025_04_07_04_21_30_010.npz  nightskycam3_2025_04_07_04_21_30_011.npz  nightskycam3_2025_04_07_04_21_30_012.npz  nightskycam3_2025_04_29_00_07_30_000.npz  nightskycam3_2025_04_29_00_07_30_001.npz
scripts/: combine_healpixes.py  compute_healpix_indices.py  display_patch.py  generate_video.py  healpix_dict_patched_image.py  plot_healpix_image.py  process_folder.py  process_image.py  reset_jpeg_to_display.py  to_jpg_and_wcs.py  view_healpix.py  visualize_patches.py
skymapper/: __init__.py  calibration.py  conversions.py  healpix.py  (+9 more)
(+28 files in other folders)
