[tool.poetry]
name = "skymapper"
version = "0.1.0"
description = "A tool for mapping fisheye sky images to HEALPix coordinates"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "skymapper"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
loguru = "^0.7.2"
rich = "^14.0.0"
astropy = "^7.1.0"
numpy = "^2.3.0"
matplotlib = "^3.10.3"
imageio = "^2.37.0"
multipledispatch = "^1.0.0"
opencv-python = "^4.11.0.86"
auto-stretch = "^0.0.3"

[tool.poetry.scripts]
skymapper = "skymapper.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
